<resources>
    <string name="app_name">CycleDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CycleDo －忘却曲線－</string>
    <string name="nav_header_subtitle">絶対、忘れない！！</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="edit_menu_cycle_reset">サイクルを１つ戻す</string>
    <string name="edit_menu_cycle_reset_all">初めからやり直す</string>

    <string name="action_settings">設定</string>


    <string name="menu_list">リスト</string>
    <string name="menu_add">登録</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_dust">ゴミ箱</string>
    <string name="add_article_date">開始日：</string>
    <string name="update_article_date">更新日：</string>

    <string name="add_title">タイトル</string>
    <string name="add_edit_text_placeholder">詳細を入力してください</string>

    <string name="list_menu_condition">表示切替</string>
    <string name="list_menu_add">登録</string>
    <string name="edit_add_complete">登録しました</string>
    <string name="edit_reset_cycle">１つ前に戻しました</string>
    <string name="edit_reset_cycle_all">初めからに更新しました</string>

    <string name="select_tag_message">ラベルを指定</string>
    <string name="select_tag_message_hint">ラベル追加(複数追加は、空白区切り）</string>
    <string name="select_tag_do">登録</string>
    <string name="select_tag_cancel">キャンセル</string>

    <string name="list_label_now_title">本日：</string>
    <string name="list_label_all_title">全て：</string>
    <string name="list_label">ラベル</string>
    <string name="list_label_edit">ラベル編集</string>
    <string name="list_logical_delete_complete">ゴミ箱に移動しました。</string>
    <string name="list_physical_delete_complete">削除しました。</string>
    <string name="list_not_logical_delete_update">ゴミ箱から戻しました。</string>

    <string name="label_edit_delete">ラベル削除</string>
    <string name="label_edit_update_success">ラベルを更新しました。</string>
    <string name="label_edit_delete_success">ラベルを削除しました。</string>

    <string name="setting_notification_title_message">通知時間を設定しする。</string>
</resources>
