<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_label"
            android:icon="@drawable/ic_baseline_label_24"
            android:title="@string/list_label" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_dust"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/menu_dust" />
        </menu>
    </item>

</menu>
