<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.google.norinori6791.cycledo.ui.list.ListFragment"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_nav_list_to_nav_edit"
            app:destination="@id/nav_edit" />
        <argument
            android:name="item"
            app:argType="com.google.norinori6791.cycledo.model.data.Task"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.google.norinori6791.cycledo.ui.edit.EditFragment"
        tools:layout="@layout/fragment_edit" >
        <action
            android:id="@+id/action_nav_edit_to_nav_list"
            app:destination="@id/nav_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_label"
        android:name="com.google.norinori6791.cycledo.ui.label.LabelFragment"
        android:label="@string/list_label"
        tools:layout="@layout/fragment_label" >
        <action
            android:id="@+id/action_nav_label_to_nav_label_edit"
            app:destination="@id/nav_label_edit" />
        <argument
            android:name="item"
            app:argType="com.google.norinori6791.cycledo.model.data.Tag"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_label_to_nav_list"
            app:destination="@id/nav_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_label_edit"
        android:name="com.google.norinori6791.cycledo.ui.labeledit.LabelEditFragment"
        android:label="@string/list_label_edit"
        tools:layout="@layout/fragment_label_edit" >
        <action
            android:id="@+id/action_nav_label_edit_to_nav_label"
            app:destination="@id/nav_label" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.google.norinori6791.cycledo.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_send"
        android:name="com.google.norinori6791.cycledo.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>